Added Spring Native - WIP